--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -9,16 +9,19 @@
 </head>
 <body>
     <header>
-        <div class="col-lg-9">
+        <nav class="col-lg-9 col-xl-10 d-none d-lg-flex align-items-center">
             <a href="https://abb-bank.az/az/haqqimizda/tender-elanlari">Tender elanları</a>
             <a href="https://abb-bank.az/az/haqqimizda">Haqqımızda</a>
-            <a href="https://abb-bank.az/az/tarifler-ve-standart-sertler"></a>
-            <a href="https://abb-bank.az/az/xeberler"></a>
-            <a href="https://abb-bank.az/az/xidmet-shebekesi/filiallar"></a>
-            <a href="https://abb-bank.az/az/onlayn-xidmetler"></a>
-            <a href="https://careers.abb-bank.az/">Karyera portalı</a>
-        </div>
-
+            <a href="https://abb-bank.az/az/tarifler-ve-standart-sertler">Tariflər və Standart şərtlər</a>
+            <a href="https://abb-bank.az/az/xeberler">Xəbərlər</a>
+            <a href="https://abb-bank.az/az/xidmet-shebekesi/filiallar">Xidmət şəbəkəsi</a>
+            <a href="https://abb-bank.az/az/onlayn-xidmetler">Onlayn xidmətlər</a>
+            <a id="Karyera" href="https://careers.abb-bank.az/">Karyera portalı</a>
+        </nav>
+        <span class="d-flex align-items-center mr-2 mr-lg-3 pr-1 cursor-p" id="js-search-open">
+                <span class="icon icon-search square-12 icon-color"></span>
+                <span class="d-none d-lg-inline-block fs-14 ml-2 color-666">Axtarış</span>
+        </span>
     </header>
     <script src="js/app.js"></script>
 </body>
