--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -24,5 +24,7 @@
         </span>
     </header>
     <script src="js/app.js"></script>
+    <p>Ass hill town</p>
+    <!--Seymurchik)-->
 </body>
 </html>
